reduces image sizes and fixes banner text on mobile

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -96,3 +96,13 @@
     }
   }
 }
+
+@media (max-width: 400px) {
+  .home-page-wrapper {
+    .catch-line {
+      h1 {
+        font-size: 1.5em;
+      }
+    }
+  }
+}
